# Protein-Pipeline

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
ChiralBoltz-main/ChiralBoltz-main/: LICENSE  README.md  pyproject.toml
ChiralBoltz-main/ChiralBoltz-main/chiralboltz/: __init__.py
ChiralBoltz-main/ChiralBoltz-main/chiralboltz/augmentation/: __init__.py  dataset.py  mirror.py
ChiralBoltz-main/ChiralBoltz-main/chiralboltz/data/: __init__.py  pdb_mirror.py  validation_set.py
ChiralBoltz-main/ChiralBoltz-main/chiralboltz/evaluate/: __init__.py  chirality_metrics.py
ChiralBoltz-main/ChiralBoltz-main/chiralboltz/loss/: __init__.py  chiral_volume.py
ChiralBoltz-main/ChiralBoltz-main/chiralboltz/training/: __init__.py  config.py  trainer.py
ChiralBoltz-main/ChiralBoltz-main/configs/: chiralboltz_eval.yaml  chiralboltz_finetune.yaml
ChiralBoltz-main/ChiralBoltz-main/scripts/: evaluate_chirality.py  fine_tune.py  prepare_mirror_dataset.py
ChiralBoltz-main/ChiralBoltz-main/tests/: test_chiral_volume_loss.py  test_dataset.py  test_mirror.py
DisorderNet-master/DisorderNet-master/: README.md  extract_esm_embeddings.py  features.py  features_fast.py  fetch_disprot.py  generate_figures.py  generate_figures_v6.py  run_final.py  run_v5_esm.py  run_v6_mem.py  run_v6_opt.py
DisorderNet-master/DisorderNet-master/colab/: DisorderNet_Colab_Pro.ipynb
DisorderNet-master/DisorderNet-master/results/: metrics.json
DisorderNet-master/DisorderNet-master/results_v6/: metrics.json
QCFold-main/QCFold-main/: README.md  requirements.txt
QCFold-main/QCFold-main/configs/: default.yaml
QCFold-main/QCFold-main/manuscript/: manuscript.md
QCFold-main/QCFold-main/outputs/: benchmark_results.json  per_protein_results.csv
QCFold-main/QCFold-main/qcfold/: config.py
QCFold-main/QCFold-main/scripts/: evaluate.py  generate_figures.py  quantum_demo.py  run_ablations.py
marena-qadf-protein-quantum-master/marena-qadf-protein-quantum-master/: CLAIMS.md  MEMO.md  README.md  requirements.txt
marena-qadf-protein-quantum-master/marena-qadf-protein-quantum-master/app/: qadf_explorer.html
marena-qadf-protein-quantum-master/marena-qadf-protein-quantum-master/data/: qubo_encoding.py  setup_and_data.py
marena-qadf-protein-quantum-master/marena-qadf-protein-quantum-master/paper/: manuscript.md  phase10_dynamic_or_limits.md  phase1_positioning_memo.md  phase2_qadf.md  phase3_model_spec.md  phase8_alphafold_comparison.md
qprotein-iws-master/qprotein-iws-master/: README.md  requirements.txt
tests/: test_chirality.py
(+51 files in other folders)
